Endpoint topAuthorsByMonth y documentaci'on openapi
